Java 基础修正